; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-packet-queue.c_packet_queue_free.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-packet-queue.c_packet_queue_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ff_packet_queue = type { %struct.TYPE_2__, i32, i32 }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @packet_queue_free(%struct.ff_packet_queue* %0) #0 {
  %2 = alloca %struct.ff_packet_queue*, align 8
  store %struct.ff_packet_queue* %0, %struct.ff_packet_queue** %2, align 8
  %3 = load %struct.ff_packet_queue*, %struct.ff_packet_queue** %2, align 8
  %4 = call i32 @packet_queue_flush(%struct.ff_packet_queue* %3)
  %5 = load %struct.ff_packet_queue*, %struct.ff_packet_queue** %2, align 8
  %6 = getelementptr inbounds %struct.ff_packet_queue, %struct.ff_packet_queue* %5, i32 0, i32 2
  %7 = call i32 @pthread_mutex_destroy(i32* %6)
  %8 = load %struct.ff_packet_queue*, %struct.ff_packet_queue** %2, align 8
  %9 = getelementptr inbounds %struct.ff_packet_queue, %struct.ff_packet_queue* %8, i32 0, i32 1
  %10 = call i32 @pthread_cond_destroy(i32* %9)
  %11 = load %struct.ff_packet_queue*, %struct.ff_packet_queue** %2, align 8
  %12 = getelementptr inbounds %struct.ff_packet_queue, %struct.ff_packet_queue* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = call i32 @av_free_packet(i32* %13)
  ret void
}

declare dso_local i32 @packet_queue_flush(%struct.ff_packet_queue*) #1

declare dso_local i32 @pthread_mutex_destroy(i32*) #1

declare dso_local i32 @pthread_cond_destroy(i32*) #1

declare dso_local i32 @av_free_packet(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
